--- a/.github/workflows/landelayo.yml
+++ b/.github/workflows/landelayo.yml
@@ -2,35 +2,38 @@ name: Landelayo
 
 on:
   push:
-    branches: ["master"]
+    branches: [ "master" ]
   pull_request:
-    branches: ["master"]
+    branches: [ "master" ]
 
 permissions:
   contents: read
 
 jobs:
   test:
+
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8","3.9", "3.10", "3.11", "3.12"]
+
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Python ${{ matrix.python-version }}
-          uses: actions/setup-python@v3
-          with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install flake8
-            if [-f requirements.txt]; then pip install -r requirements.txt; fi
-      - name: Run Tests
-        run: |
-          python runtests.py
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --show-source --statistics
 
-      - name: Link with flake8
-        run: |
-          flake8 . --show-source --statistics
+    - name: Run Tests
+      run: |
+        python runtests.py
