ignore flake8 long line

--- a/.github/workflows/landelayo.yml
+++ b/.github/workflows/landelayo.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --show-source --statistics
+        flake8 . --ignore=E501 --count --show-source --statistics
 
     - name: Run Tests
       run: |
