--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ jsonschema==4.22.0
     # via drf-spectacular
 jsonschema-specifications==2023.12.1
     # via jsonschema
+python-dateutil==2.9.0.post0
+    # via -r requirements.in
 pyyaml==6.0.1
     # via drf-spectacular
 referencing==0.35.1
@@ -39,6 +41,8 @@ rpds-py==0.18.1
     # via
     #   jsonschema
     #   referencing
+six==1.16.0
+    # via python-dateutil
 sqlparse==0.5.0
     # via django
 typing-extensions==4.12.1
