--- a/setup.cfg
+++ b/setup.cfg
@@ -12,12 +12,15 @@ classifiers =
     Framework :: Django
     Framework :: Django :: 4.2
     Intended Audience :: Developers
-    License :: OSI Approved :: GNU General Public License v3.0 (GPLv3)
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Internet :: WWW/HTTP
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
 
@@ -26,7 +29,7 @@ include-package_data = true
 packages = find:
 python_requires = >=3.8
 install_requires =
-    django >= 4.2
+    django ~= 4.2
     djangorestframework >= 3.14
     django_enumfield >= 3.1
 
